# xkcd-search-mcp

./: .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: index-daily.yml  sync-to-hf.yml
scripts/: smoke_test_remote.py
src/xkcd_search/: __init__.py  builder.py  config.py  embeddings.py  index_builder.py  indexer_main.py  release.py  schema.sql  server.py  sources.py
tests/: conftest.py  test_embeddings.py  test_index_builder.py  test_release.py  test_server.py  test_sources.py
tests/cassettes/test_index_builder/: test_gap_stored_when_article_missing.yaml  test_top_k_ranks_semantically_closest_comic_first.yaml  test_upsert_and_known_state.yaml
tests/cassettes/test_release/: test_download_latest_returns_none_when_no_release_exists.yaml
tests/cassettes/test_server/: test_get_comic_returns_indexed_comic.yaml  test_get_comic_returns_none_for_missing_number.yaml  test_search_xkcd_ranks_relevant_comic_first.yaml  test_search_xkcd_respects_field_flags.yaml
tests/cassettes/test_sources/: test_chunk_comic_produces_title_and_sections.yaml  test_chunk_comic_without_article_returns_title_plus_transcript.yaml  test_fetch_explainxkcd_returns_none_for_missing_article.yaml  test_fetch_explainxkcd_returns_wikitext_for_known_article.yaml  test_fetch_latest_returns_positive_integer.yaml  test_fetch_xkcd_returns_expected_shape.yaml
